Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -49,7 +49,7 @@ pixels instead of going across the whole web page.*/
   margin: auto;
 /*This declaration sets the height of the body container at 100 vertical
 height minus 4 pixels to account for the top and bottom border.*/
-  height: calc(100vh - 4px);
+  min-height: calc(100vh - 4px);
 /*This declaration sets a 2-pixel wide, solid, blue line border around the
 body container.*/
   border: 2px solid #0571b0;
@@ -59,6 +59,7 @@ container's corners and in effect makes them round.*/
 /*This declaration hides the overflow of the body container out of its
 border and in effect trims it to the border.*/
   overflow: hidden;
+  position: relative;
 }
 
 #profile-picture {
@@ -95,9 +96,15 @@ of its normal position.*/
   position: relative;
 }
 
+#content-wrap {
+  padding-bottom: 2.5rem;
+}
+
 #footer {
   position: absolute;
   width: 1000px;
   text-align: center;
-  bottom: 20px;
+  bottom: 0;
+  font-size: 15px;
+  height: 2.5rem;
 }
